pagination, search, create user, fixed broken search for datatables bundle (a lot of time)

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,6 +13,6 @@
         {{ form_row(registrationForm.confirmPassword) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Sign Up</button>
+        <button type="submit" class="button">Sign Up</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
