--- a/templates/admin/create_user.html.twig
+++ b/templates/admin/create_user.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Create User{% endblock %}
+{% block title %}Admin panel{% endblock %}
 
 {% block body %}
     <h1>Create User</h1>
