--- a/templates/admin/list_users.html.twig
+++ b/templates/admin/list_users.html.twig
@@ -3,33 +3,22 @@
 {% block title %}Admin panel{% endblock %}
 
 {% block body %}
-    <header>
-        <div class="mb-3">
-            <a href="{{ path('app_logout') }}">Log out</a>
-        </div>
-    </header>
+    <div class="d-flex justify-content-end pt-7">
+        <a href="{{ path('app_logout') }}">Log out</a>
+    </div>
 
     <style>
         .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
         .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
     </style>
 
-    <div id="del_user">
-        <button id="del_user_btn" class="button">Delete selected row</button>
-    </div>
-    <div id="new_user">
+    <div class="menu menu-rounded menu-column menu-lg-row my-5 my-lg-0 align-items-stretch fw-semibold px-2 px-lg-0" id="kt_app_header_menu" data-kt-menu="true">
         <input type="button" value="Add new user" onClick='location.href="{{ path('create_user') }}"'>
+        <input id="edit_user" type="button" value="Edit user">
+        <button id="del_user_btn" class="btn btn-sm fw-bold btn-primary">Delete selected row</button>
     </div>
-{#    <div id="edit_user">#}
-{#        <input type="button" id="edit_user_btn" class="intable_btn" value="Edit new user" onClick='location.href="{{ path('update_user_list', {id: user.id}) }}"'>#}
-{#    </div>#}
 
-    <a href=""></a>
-    <div id="del_user">
-        <button id="edit_user_btn" class="button">Edit new user</button>
-    </div>
     <div id="user">Loading...</div>
-
 
     <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
     <script>
@@ -38,6 +27,7 @@
             $('#user').initDataTables({{ datatable_settings(datatable) }}, {
                 'processing': false,
                 'serverSide': true,
+
             }).then(function (dt) {
                 dt.on('click', 'tr', function () {
                     if ($(this).hasClass('selected')) {
@@ -75,18 +65,16 @@
                         alert('Select the row to delete!')
                     }
                 })
-                $('#edit_user_btn').click(function () {
+                $('#edit_user').click(function () {
+                    let url = '{{ path("update_user_list") }}';
                     if (dt.row('.selected').id() != null) {
                         let data = dt.row('.selected').id();
-                        // let par = parseInt(data);
-                        {#let url = '{{ path('update_user_list') }}';#}
-                        // $.get('/admin/users/update', {id: data});
                         $.ajax({
-                            url: '/admin/users/update',
+                            url: url,
                             type: 'GET',
-                            data: {'id': data},
+                            data: {id: data},
                             success: function (response) {
-                                dt.$('.selected').removeClass('selected'); //
+                                window.location.href = url + "?id=" + data;
                                 console.log(response);
                             },
                             error: function (xhr) {
@@ -102,6 +90,5 @@
             });
         });
     </script>
-
 
 {% endblock %}
