--- a/templates/admin/list_users.html.twig
+++ b/templates/admin/list_users.html.twig
@@ -3,21 +3,11 @@
 {% block title %}Admin panel{% endblock %}
 
 {% block body %}
-    <div class="d-flex justify-content-end pt-7">
-        <a href="{{ path('app_logout') }}">Log out</a>
+    <div class="d-flex justify-content-start pt-3" id="kt_app_header_menu" data-kt-menu="true">
+        <input class="btn btn-sm fw-bold btn-success me-3" type="button" value="Add new user" onClick='location.href="{{ path('create_user') }}"'>
+        <input id="edit_user" class="btn btn-sm fw-bold btn-warning me-3" type="button" value="Edit user">
+        <button id="del_user_btn" class="btn btn-sm fw-bold btn-danger me-3">Delete selected row</button>
     </div>
-
-    <style>
-        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    </style>
-
-    <div class="menu menu-rounded menu-column menu-lg-row my-5 my-lg-0 align-items-stretch fw-semibold px-2 px-lg-0" id="kt_app_header_menu" data-kt-menu="true">
-        <input type="button" value="Add new user" onClick='location.href="{{ path('create_user') }}"'>
-        <input id="edit_user" type="button" value="Edit user">
-        <button id="del_user_btn" class="btn btn-sm fw-bold btn-primary">Delete selected row</button>
-    </div>
-
     <div id="user">Loading...</div>
 
     <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
