--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
 
         <script src={{ asset('metronic/plugins/global/plugins.bundle.js') }}></script>
         <script src={{ asset('metronic/js/scripts.bundle.js') }}></script>
-{#        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />#}
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
         <link href="{{ asset("metronic/plugins/global/plugins.bundle.css") }}" rel="stylesheet" type="text/css" />
         <link href="{{ asset("metronic/css/style.bundle.css") }}" rel="stylesheet" type="text/css" />
 
@@ -28,7 +28,7 @@
         {% endblock %}
     </head>
 
-    <body  id="kt_app_body" data-kt-app-layout="dark-header" data-kt-app-header-fixed="true" data-kt-app-toolbar-enabled="true" class="app-default">
+    <body  id="kt_app_body" data-kt-app-layout="dark-header" data-kt-app-header-fixed="false" data-kt-app-toolbar-enabled="true" class="app-default">
     <script>var defaultThemeMode = "light"; var themeMode; if ( document.documentElement ) { if ( document.documentElement.hasAttribute("data-bs-theme-mode")) { themeMode = document.documentElement.getAttribute("data-bs-theme-mode"); } else { if ( localStorage.getItem("data-bs-theme") !== null ) { themeMode = localStorage.getItem("data-bs-theme"); } else { themeMode = defaultThemeMode; } } if (themeMode === "system") { themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light"; } document.documentElement.setAttribute("data-bs-theme", themeMode); }</script>
     <!--begin::Header-->
     <div id="kt_app_header" class="app-header">
@@ -1480,6 +1480,12 @@
                 <!--end::Menu wrapper-->
                 <!--begin::Navbar-->
                 <div class="app-navbar flex-shrink-0">
+                    {% if app.user %}
+                        <div class="app-navbar-item ms-1 ms-md-3">
+                            {{ app.user.userIdentifier }}! <a href="{{ path('app_logout') }}">Log out</a>
+                        </div>
+                    {% endif %}
+
                 </div>
                 <!--end::Navbar-->
             </div>
