--- a/templates/admin/list_users.html.twig
+++ b/templates/admin/list_users.html.twig
@@ -3,21 +3,19 @@
 {% block title %}Admin panel{% endblock %}
 
 {% block body %}
-    <div class="d-flex justify-content-start pt-3" id="kt_app_header_menu" data-kt-menu="true">
-        <input class="btn btn-sm fw-bold btn-success me-3" type="button" value="Add new user" onClick='location.href="{{ path('create_user') }}"'>
-        <input id="edit_user" class="btn btn-sm fw-bold btn-warning me-3" type="button" value="Edit user">
+    <div class="d-flex justify-content-start pt-3 col-sm-8 mx-auto" id="kt_app_header_menu" data-kt-menu="true">
+        <input id="new_user_btn" class="btn btn-sm fw-bold btn-success me-3" type="button" value="Add new user" onClick='location.href="{{ path('create_user') }}"'>
+        <input id="edit_user_btn" class="btn btn-sm fw-bold btn-warning me-3" type="button" value="Edit user">
         <button id="del_user_btn" class="btn btn-sm fw-bold btn-danger me-3">Delete selected row</button>
     </div>
-    <div id="user">Loading...</div>
+    <div id="users">Loading...</div>
 
     <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
     <script>
         $(document).ready(function () {
-        $('.dataTables_filter input').off(); //
-            $('#user').initDataTables({{ datatable_settings(datatable) }}, {
+            $('#users').initDataTables({{ datatable_settings(datatable) }}, {
                 'processing': false,
                 'serverSide': true,
-
             }).then(function (dt) {
                 dt.on('click', 'tr', function () {
                     if ($(this).hasClass('selected')) {
@@ -55,7 +53,7 @@
                         alert('Select the row to delete!')
                     }
                 })
-                $('#edit_user').click(function () {
+                $('#edit_user_btn').click(function () {
                     let url = '{{ path("update_user_list") }}';
                     if (dt.row('.selected').id() != null) {
                         let data = dt.row('.selected').id();
