--- a/templates/admin/list_users.html.twig
+++ b/templates/admin/list_users.html.twig
@@ -1,82 +1,20 @@
 {% extends 'base.html.twig' %}
+    {% block title %}Admin panel{% endblock %}
+    {% block stylesheets %}
+        {{ parent() }}
+        {{ encore_entry_link_tags('table') }}
+    {% endblock %}
 
-{% block title %}Admin panel{% endblock %}
+    {% block javascripts %}
+        {{ parent() }}
+        {{ encore_entry_script_tags('table') }}
+    {% endblock %}
 
 {% block body %}
     <div class="d-flex justify-content-start pt-3 col-sm-8 mx-auto" id="kt_app_header_menu" data-kt-menu="true">
         <input id="new_user_btn" class="btn btn-sm fw-bold btn-success me-3" type="button" value="Add new user" onClick='location.href="{{ path('create_user') }}"'>
-        <input id="edit_user_btn" class="btn btn-sm fw-bold btn-warning me-3" type="button" value="Edit user">
-        <button id="del_user_btn" class="btn btn-sm fw-bold btn-danger me-3">Delete selected row</button>
+        <button id="edit_user_btn" class="btn btn-sm fw-bold btn-warning me-3" data-path="{{ path("update_user_list") }}">Edit user</button>
+        <button id="del_user_btn" class="btn btn-sm fw-bold btn-danger me-3" data-path="{{ path("delete_user") }}">Delete selected row</button>
     </div>
-    <div id="users">Loading...</div>
-
-    <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
-    <script>
-        $(document).ready(function () {
-            $('#users').initDataTables({{ datatable_settings(datatable) }}, {
-                'processing': false,
-                'serverSide': true,
-            }).then(function (dt) {
-                dt.on('click', 'tr', function () {
-                    if ($(this).hasClass('selected')) {
-                        $(this).removeClass('selected');
-                    } else {
-                        dt.$('.selected').removeClass('selected');
-                        $(this).addClass('selected');
-                    }
-                })
-                $('#del_user_btn').click(function () {
-                    let url = '{{ path("delete_user") }}';
-                    if (dt.row('.selected').id() != null) {
-                        let data = dt.row('.selected').id();
-                        $.ajax({
-                            url: url,
-                            type: 'DELETE',
-                            contentType: "application/x-www-form-urlencoded; charset=UTF-8",
-                            data: {'id': data},
-                            success: function (response) {
-                                if (response.success) {
-                                    console.log(response);
-                                    dt.row('selected').remove().draw(false);
-                                } else {
-                                    console.log(response);
-                                    alert(response.message + ' ' + response.code);
-                                }
-                            },
-                            error: function (xhr) {
-                                let errorInfo = 'Error request: ' + '[' + xhr.status + ' ' + xhr.statusText + ']';
-                                console.log('ajaxError xhr:', xhr);
-                                alert(errorInfo);
-                            }
-                        });
-                    } else {
-                        alert('Select the row to delete!')
-                    }
-                })
-                $('#edit_user_btn').click(function () {
-                    let url = '{{ path("update_user_list") }}';
-                    if (dt.row('.selected').id() != null) {
-                        let data = dt.row('.selected').id();
-                        $.ajax({
-                            url: url,
-                            type: 'GET',
-                            data: {id: data},
-                            success: function (response) {
-                                window.location.href = url + "?id=" + data;
-                                console.log(response);
-                            },
-                            error: function (xhr) {
-                                let errorInfo = 'Error request: ' + '[' + xhr.status + ' ' + xhr.statusText + ']';
-                                console.log('ajaxError xhr:', xhr);
-                                alert(errorInfo);
-                            }
-                        });
-                    } else {
-                        alert('Select the row to edit!')
-                    }
-                })
-            });
-        });
-    </script>
-
+    <div id="users" data-db={{ datatable_settings(datatable) }}>Loading...</div>
 {% endblock %}
