--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-    <h1 class="d-flex flex-center flex-column-fluid pb-1 pb-lg-3 pt-3">Please sign in</h1>
+    <h1 class="d-flex flex-center flex-column-fluid pb-1 pb-lg-3 pt-3">Entrance</h1>
     <div class="d-flex flex-center flex-column-fluid pb-15 pb-lg-20">
         <form method="post" style="width: 20%;">
             <div class="d-grid mb-1">
