--- a/templates/admin/list_users.html.twig
+++ b/templates/admin/list_users.html.twig
@@ -13,7 +13,7 @@
 {% block body %}
     <div class="d-flex justify-content-start pt-3 col-sm-8 mx-auto" id="kt_app_header_menu" data-kt-menu="true">
         <input id="new_user_btn" class="btn btn-sm fw-bold btn-success me-3" type="button" value="Add new user" onClick='location.href="{{ path('create_user') }}"'>
-        <button id="edit_user_btn" class="btn btn-sm fw-bold btn-warning me-3" data-path="{{ path("update_user_list") }}">Edit user</button>
+        <button id="edit_user_btn" class="btn btn-sm fw-bold btn-warning me-3">Edit user</button>
         <button id="del_user_btn" class="btn btn-sm fw-bold btn-danger me-3" data-path="{{ path("delete_user") }}">Delete selected row</button>
     </div>
     <div id="users" data-db={{ datatable_settings(datatable) }}>Loading...</div>
